--- a/Capapresentacionadmin/Web.config
+++ b/Capapresentacionadmin/Web.config
@@ -5,14 +5,14 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="CompanyJLS" providerName="System.Data.ProviderName" connectionString="Data Source=HP-LAPTOP-DE-LA\SQLEXPRESS;Initial Catalog=DatabaseCompanyJLS; Integrated Security=True" />
+		<add name="CompanyJLS" providerName="System.Data.ProviderName" connectionString="Data Source=HP-LAPTOP-DE-LA\SQLEXPRESS;Initial Catalog=DBCompanyJLSV2; Integrated Security=True" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ServidorFotos" value="CompanyJLSNnueva\Fotos_Carrito" />
+    <add key="ServidorFotos" value="C:\Users\GORIL\Desktop\Companynueva\Fotos_carrito" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
