--- a/CapaEntidad/CapaEntidad.csproj
+++ b/CapaEntidad/CapaEntidad.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Carrito.cs" />
     <Compile Include="Categoria.cs" />
     <Compile Include="Cliente.cs" />
+    <Compile Include="DashBoard.cs" />
     <Compile Include="DetalleFactura.cs" />
     <Compile Include="Factura.cs" />
     <Compile Include="Plato.cs" />
