--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CD_Categoria.cs" />
+    <Compile Include="CD_Cliente.cs" />
     <Compile Include="CD_Plato.cs" />
     <Compile Include="CD_Reporte.cs" />
     <Compile Include="CD_Usuarios.cs" />
