--- a/CapaPresentacionTienda/bin/CapaPresentacionTienda.dll.config
+++ b/CapaPresentacionTienda/bin/CapaPresentacionTienda.dll.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+	<connectionStrings>
+		<add name="CompanyJLS" providerName="System.Data.ProviderName" connectionString="Data Source=HP-LAPTOP-DE-LA\SQLEXPRESS;Initial Catalog=DatabaseCompanyJLS; Integrated Security=True" />
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
