--- a/Capapresentacionadmin/Web.config
+++ b/Capapresentacionadmin/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="CompanyJLS" providerName="System.Data.ProviderName" connectionString="Data Source=HP-LAPTOP-DE-LA\SQLEXPRESS;Initial Catalog=DBCompanyJLSV2; Integrated Security=True" />
+		<add name="CompanyJLS" providerName="System.Data.ProviderName" connectionString="Data Source=HP-LAPTOP-DE-LA\SQLEXPRESS;Initial Catalog=DatabaseCompanyJLS; Integrated Security=True" />
 	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -15,6 +15,10 @@
     <add key="ServidorFotos" value="C:\Users\GORIL\Desktop\Companynueva\Fotos_carrito" />
   </appSettings>
   <system.web>
+	  <authentication mode="Forms">
+		  <forms loginUrl="/Acceso/Index">
+		  </forms>
+	  </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
